# LPDEquilibria

./: .gitignore  Equilibrium.py  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
doc/: README
meshes/: Mesh.ASCII
src/: ChargedMotion.py  Equilibrium.py  README  coils.py  equilibrium.py  main.py  mesh.py  plotting.py  resonances.py  sources.py
tests/: test_smoke.py
