[project]
name = "lpd-equilibria"
version = "0.1.0"
description = "Python tools for magnetic equilibria and field-aligned meshes for edge plasma codes (e.g. SOLPS-ITER) in Linear Plasma Devices."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Michele Sala" }]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "matplotlib>=3.8",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["meshes", "Coils", "doc"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "NPY", # NumPy-specific rules
]
ignore = [
    "E501", # line-too-long (handled by formatter)
    "E741", # ambiguous variable name (physics conventions use l, I, etc.)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --strict-markers"
